height to 51% for animation heightstretch to prevent white line

--- a/src/styles/animation.css
+++ b/src/styles/animation.css
@@ -23,7 +23,7 @@
   }
   to {
     opacity: 100;
-    height: 50%;
+    height: 51%;
   }
 }
 
